--- a/styles/globals.css
+++ b/styles/globals.css
@@ -168,6 +168,56 @@ body {
   font-size: 20px;
 }
 
+ul.complete {
+  list-style: none;
+  font-size: 18px;
+}
+
+ul.complete li {
+  display: flex;
+  /* align-items: center; */
+}
+
+ul.complete li a:hover {
+  color: #121ea8 !important;
+}
+
+.agreements-block {
+  padding: 15px 10px;
+  padding-left: 0px;
+  -webkit-box-shadow: 12px 47px 59px -22px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 12px 47px 59px -22px rgba(0, 0, 0, 0.3);
+  box-shadow: 12px 47px 59px -22px rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.115);
+  border-radius: 15px;
+
+}
+
+ul.complete li::before {
+  content: '🗹 ';
+  color: #121ea8;
+  font-weight: bold;
+  margin-right: 5px;
+  font-size: 20px;
+  text-decoration: none !important;
+}
+
+ul.complete li {
+  line-height: 30px;
+}
+
+ul.complete li:last-child {
+  display: none;
+}
+
+/* ul.complete li:last-child {
+  display: none;
+} */
+
+.container-checkbox input:checked~.checkmark {
+  background-color: #2196F3;
+}
+
 .footer .footerCol .socials--icons i {
   width: 47px;
   height: 47px;
@@ -327,7 +377,7 @@ input::-ms-track {
   padding: 4px 5px;
   font-weight: bold;
   border-radius: 15px;
-  font-size: 14px;
+  font-size: 10px;
   transform: translateY(5px);
 }
 
@@ -469,7 +519,7 @@ button {
 }
 
 .finance .primary {
-  margin-top: 280px;
+  padding-top: 50px;
 }
 
 @media only screen and (min-width: 321px) and (max-width: 768px) {
@@ -549,7 +599,7 @@ button {
   /* padding: 2px; */
   background-color: #dbd6d600;
   color: #ef2221;
-  font-size: 12px;
+  font-size: 7.8px;
 }
 
 .logo h2 {
@@ -894,9 +944,16 @@ a,
   .paymentCenter {
     display: none !important;
   }
+
+  .finance .primary {
+    padding-top: 350px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
+  .header-text {
+    display: none !important
+  }
 
   /* .secondary-header {
     display: none !important;
@@ -2331,4 +2388,367 @@ input:focus {
 
 .playbtn:hover .playblock {
   background-color: #a7a1a18d;
+}
+
+
+/* 404 error */
+.error-contain {
+  position: absolute;
+  height: 350px;
+  width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.error-text h1 {
+  font-size: 100px !important;
+  font-family: monospace;
+  margin: 0;
+  text-shadow: 1px 1px 1px #fff, -1px -1px 1px black;
+}
+
+.error-text {
+  text-align: center;
+  font-weight: bold;
+}
+
+.error-text p {
+  font-family: monospace;
+  font-size: 16px;
+}
+
+.error-text p:nth-child(3) {
+  margin-top: 150px;
+}
+
+.binoculars {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-60%, 20%);
+  transition: 1s;
+}
+
+.binoculars {
+  /* 	animation-name: wiggle; */
+  animation-duration: 10s;
+  animation-delay: 5s;
+  animation-iteration-count: infinite;
+}
+
+.left-bino-lense,
+.right-bino-lense {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: 5px solid black;
+  display: inline-block;
+  transform: skewX(-10deg);
+  background: white;
+  overflow: hidden;
+  position: relative;
+}
+
+.left-bino-lense {
+  margin-right: 10px;
+}
+
+.left-bino-lense::before,
+.right-bino-lense::before {
+  width: 20px;
+  height: 20px;
+  content: '';
+  display: block;
+  background: black;
+  position: absolute;
+  border: 3px solid #3066c9;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-70%, -55%);
+  animation-name: eye-move;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-delay: 3s;
+}
+
+.back-bino {
+  width: 70px;
+  height: 30px;
+  background: black;
+  position: absolute;
+  top: 23px;
+  left: 40px;
+}
+
+.left-bino,
+.right-bino {
+  position: absolute;
+  height: 100px;
+  width: 80px;
+  perspective: 80px;
+  transform: rotate(100deg);
+  right: -25px;
+  top: 1px;
+}
+
+.right-bino {
+  left: -1px;
+}
+
+.left-bino::after,
+.right-bino::after {
+  content: '';
+  padding: 21px;
+  padding-top: 45px;
+  position: absolute;
+  border: 1px solid black;
+  background: black;
+  transform-style: preserve-3d;
+  transform: rotateX(30deg);
+  border-radius: 30% 80% 0 0;
+  left: 1px;
+  top: -4px;
+}
+
+.left-bino-lense .eye {
+  width: 100%;
+  height: 100%;
+}
+
+.eye::before,
+.eye::after {
+  content: '';
+  display: block;
+  width: 45px;
+  height: 26px;
+  background: #f5cd8c;
+  position: absolute;
+  transition: 1s;
+}
+
+.eye::before {
+  border-radius: 50% 50% 0 0;
+  border-bottom: 2px solid #b88c44;
+  top: -30px;
+  animation-name: eye-up;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+.eye::after {
+  border-radius: 0 0 50% 50%;
+  border-top: 2px solid #b88c44;
+  bottom: -30px;
+  animation-name: eye-down;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+.binoculars:hover .eye::after {
+  bottom: -30px;
+}
+
+.binoculars:hover .eye::before {
+  top: -30px;
+}
+
+@keyframes eye-up {
+  0% {
+    top: -30px;
+  }
+
+  50% {
+    top: -30px;
+  }
+
+  55% {
+    top: -5px;
+  }
+
+  60% {
+    top: -30px;
+  }
+}
+
+@keyframes eye-down {
+  0% {
+    bottom: -30px;
+  }
+
+  50% {
+    bottom: -30px;
+  }
+
+  55% {
+    bottom: -3px;
+  }
+
+  60% {
+    bottom: -30px;
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: translate(-50%, -20%);
+  }
+
+  10% {
+    transform: skew(-20deg) translate(-50%, -20%) rotate(20deg);
+  }
+
+  30% {
+    transform: skew(20deg) translate(-50%, -20%) rotate(-20deg);
+  }
+
+  40% {
+    transform: translate(-50%, -20%);
+  }
+
+  50% {}
+}
+
+@keyframes eye-move {
+  0% {
+    transform: translate(-70%, -55%);
+  }
+
+  10% {
+    transform: translate(-90%, -90%);
+  }
+
+  20% {
+    transform: translate(-60%, -110%);
+  }
+
+  30% {
+    transform: translate(-20%, -20%);
+  }
+
+  40% {
+    transform: translate(-60%, -0%);
+  }
+
+  50% {
+    transform: translate(-70%, -55%);
+  }
+}
+
+
+/* 404 error */
+
+#notfound {
+  position: relative;
+  height: 100vh;
+}
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.notfound {
+  max-width: 520px;
+  width: 100%;
+  text-align: center;
+  line-height: 1.4;
+}
+
+.notfound .notfound-404 {
+  height: 190px;
+}
+
+.notfound .notfound-404 h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 146px;
+  font-weight: 700;
+  margin: 0px;
+  color: #232323;
+}
+
+.notfound .notfound-404 h1>span {
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  background-image: url("https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/mozilla/36/pensive-face_1f614.png");
+  background-size: cover;
+  -webkit-transform: scale(1.4);
+  -ms-transform: scale(1.4);
+  transform: scale(1.4);
+  z-index: -1;
+  animation-name: floating;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+.notfound h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+  margin: 0;
+  text-transform: uppercase;
+  color: #232323;
+}
+
+.notfound p {
+  font-family: "Montserrat", sans-serif;
+  color: #787878;
+  font-weight: 300;
+}
+
+.notfound a {
+  font-family: "Montserrat", sans-serif;
+  display: inline-block;
+  padding: 12px 30px;
+  font-weight: 700;
+  background-color: #ef2221;
+  color: #fff !important;
+  border-radius: 40px;
+  text-decoration: none;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+
+.notfound a:hover {
+  opacity: 0.8;
+}
+
+@media only screen and (max-width: 767px) {
+  .notfound .notfound-404 {
+    height: 115px;
+  }
+
+  .notfound .notfound-404 h1 {
+    font-size: 86px;
+  }
+
+  .notfound .notfound-404 h1>span {
+    width: 86px;
+    height: 86px;
+  }
+}
+
+@keyframes floating {
+  from {
+    transform: scale(1.4) translate(0, 0);
+  }
+
+  50% {
+    transform: scale(1.4) translate(0, 15px);
+  }
+
+  to {
+    transform: scale(1.4) translate(0, 0);
+  }
 }
