--- a/styles/globals.css
+++ b/styles/globals.css
@@ -190,11 +190,10 @@ ul.complete li a:hover {
   box-shadow: 12px 47px 59px -22px rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(0, 0, 0, 0.115);
   border-radius: 15px;
-
 }
 
 ul.complete li::before {
-  content: '🗹 ';
+  content: "🗹 ";
   color: #121ea8;
   font-weight: bold;
   margin-right: 5px;
@@ -214,8 +213,8 @@ ul.complete li:last-child {
   display: none;
 } */
 
-.container-checkbox input:checked~.checkmark {
-  background-color: #2196F3;
+.container-checkbox input:checked ~ .checkmark {
+  background-color: #2196f3;
 }
 
 .footer .footerCol .socials--icons i {
@@ -396,11 +395,11 @@ input::-ms-track {
   /* margin: auto; */
 }
 
-input:focus~div {
+input:focus ~ div {
   opacity: 1;
 }
 
-select:focus~div {
+select:focus ~ div {
   opacity: 1;
 }
 
@@ -429,7 +428,8 @@ select:focus~div {
   left: 0;
   height: 100%;
   width: 100%;
-  background: rgba(255, 255, 255, 0.8) url("https://i.stack.imgur.com/FhHRx.gif") 50% 50% no-repeat;
+  background: rgba(255, 255, 255, 0.8)
+    url("https://i.stack.imgur.com/FhHRx.gif") 50% 50% no-repeat;
 }
 
 .loaded {
@@ -709,7 +709,9 @@ button {
 }
 
 .phone-numbersMov h1 {
-  font-size: calc(12px + (26 - 12) * ((100vw - 320px) / (768 - 320))) !important;
+  font-size: calc(
+    12px + (26 - 12) * ((100vw - 320px) / (768 - 320))
+  ) !important;
 }
 
 .phone-numbers li {
@@ -769,7 +771,8 @@ button {
   margin-right: 15px;
 }
 
-.phone-numbers ul li i a {}
+.phone-numbers ul li i a {
+}
 
 .phone-numbers li .whatsapp {
   display: flex;
@@ -810,9 +813,11 @@ button {
   transform: translateX(-50%);
 }
 
-.modal {}
+.modal {
+}
 
-.modal .calculator-band {}
+.modal .calculator-band {
+}
 
 .calculator-band {
   display: flex;
@@ -837,11 +842,10 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .repeatedinfo {
-  font-family: 'CTCSplachRounded' !important;
+  font-family: "CTCSplachRounded" !important;
 }
 
 .calculator-band .repeatedBtn,
@@ -876,8 +880,6 @@ button {
 .calculator-band .repeatedBtn {
   display: none;
 }
-
-
 
 .calculator .texts {
   display: none !important;
@@ -951,13 +953,10 @@ a,
 }
 
 @media only screen and (max-width: 768px) {
-  .header-text {
-    display: none !important
+  .secondary-header {
+    display: none !important;
   }
 
-  /* .secondary-header {
-    display: none !important;
-  } */
   .otherPages--top .container {
     display: flex;
     justify-content: center;
@@ -967,16 +966,8 @@ a,
   }
 
   .secondary-header {
-    /* display: none; */
-    /* transform: scale(0.9); */
     margin: auto;
-    margin-left: 40px !important
-      /* text-align: center; */
-
-  }
-
-  .header-text {
-    /* transform: scale(0.5); */
+    margin-left: 40px !important;
   }
 
   .secondary-header .span {
@@ -1023,7 +1014,8 @@ a,
   border: 1px solid #979797;
   border-radius: 17px;
   background-color: white;
-  padding: 25px calc(15px + (42 - 15) * ((100vw - 320px) / (1600 - 320))) calc(6px + (36 - 6) * ((100vw - 320px) / (1600 - 320)));
+  padding: 25px calc(15px + (42 - 15) * ((100vw - 320px) / (1600 - 320)))
+    calc(6px + (36 - 6) * ((100vw - 320px) / (1600 - 320)));
   padding-bottom: calc(10px + (20 - 10) * ((100vw - 320px) / (1600 - 320)));
   margin-bottom: calc(10px + (20 - 10) * ((100vw - 320px) / (1600 - 320)));
   position: relative;
@@ -1050,7 +1042,9 @@ a,
   letter-spacing: 0.096px;
   line-height: 27px;
   letter-spacing: 0.096px;
-  font-size: calc(14px + (24 - 14) * ((100vw - 320px) / (1600 - 320))) !important;
+  font-size: calc(
+    14px + (24 - 14) * ((100vw - 320px) / (1600 - 320))
+  ) !important;
   padding-right: 15px !important;
 }
 
@@ -1066,7 +1060,9 @@ a,
   content: "+";
   outline: none;
   color: #ef2221;
-  font-size: calc(24px + (48 - 24) * ((100vw - 320px) / (1600 - 320))) !important;
+  font-size: calc(
+    24px + (48 - 24) * ((100vw - 320px) / (1600 - 320))
+  ) !important;
   font-family: "CTCSplachRounded";
 }
 
@@ -1299,7 +1295,6 @@ a,
 .oplata .oplataform .input-group label h2 {
   font-size: 16px;
   line-height: 18px;
-  text-align: center;
   letter-spacing: 0.064px;
 }
 
@@ -1311,10 +1306,32 @@ a,
   width: calc(360px + (560 - 360) * ((100vw - 320px) / (1600 - 320)));
 }
 
+.complaint {
+  position: relative;
+  z-index: 9999;
+}
+
+.complaint label {
+  left: 0px;
+  width: 100%;
+  top: 18px;
+  color: rgb(24, 23, 23);
+  transition: 0.3s;
+  letter-spacing: 0.5px;
+}
+.complaint label h2 {
+  font-size: 15px !important;
+  margin: 0 !important;
+}
+
+.complaint .input-group input:focus {
+  border-color: rgba(0, 0, 0, 0.374) !important;
+}
+
 .oplata .oplataform .input-group input,
 .oplata .oplataform .input-group textarea {
   width: 100%;
-  padding: 17px 0;
+  padding: calc(12px + (17 - 12) * ((100vw - 720px) / (1600 - 720))) 0;
   border: 1px solid transparent;
   outline: 0;
   background: #f3f3f3;
@@ -1353,6 +1370,14 @@ a,
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.oplata .oplataform .redbtn {
+  background-color: #ef2221;
+  color: white;
+  border: none;
+  padding: calc(12px + (17 - 12) * ((100vw - 720px) / (1600 - 720)))
+    calc(45px + (58 - 45) * ((100vw - 720px) / (1600 - 720)));
+  border-radius: 7px;
 }
 
 .oplata .oplataform--button {
@@ -1427,7 +1452,8 @@ a,
   border: 1px solid #979797;
   border-radius: 17px;
   background-color: white;
-  padding: 25px calc(15px + (22 - 15) * ((100vw - 320px) / (1600 - 320))) calc(6px + (36 - 6) * ((100vw - 320px) / (1600 - 320)));
+  padding: 25px calc(15px + (22 - 15) * ((100vw - 320px) / (1600 - 320)))
+    calc(6px + (36 - 6) * ((100vw - 320px) / (1600 - 320)));
   padding-bottom: calc(10px + (15 - 10) * ((100vw - 320px) / (1600 - 320)));
   margin-bottom: calc(10px + (20 - 10) * ((100vw - 320px) / (1600 - 320)));
   position: relative;
@@ -1439,7 +1465,9 @@ a,
   content: "+";
   outline: none;
   color: #ef2221;
-  font-size: calc(34px + (48 - 34) * ((100vw - 320px) / (1600 - 320))) !important;
+  font-size: calc(
+    34px + (48 - 34) * ((100vw - 320px) / (1600 - 320))
+  ) !important;
   font-family: "CTCSplachRounded";
 }
 
@@ -1460,7 +1488,9 @@ a,
   letter-spacing: 0.096px;
   line-height: 27px;
   letter-spacing: 0.096px;
-  font-size: calc(18px + (24 - 18) * ((100vw - 320px) / (1600 - 320))) !important;
+  font-size: calc(
+    18px + (24 - 18) * ((100vw - 320px) / (1600 - 320))
+  ) !important;
 }
 
 .pogasit--instruction {
@@ -1488,7 +1518,8 @@ a,
   display: grid;
   grid-gap: 15px;
   grid-template-columns:
-    calc(105px + (120 - 105) * ((100vw - 767px) / (1600 - 767))) auto;
+    calc(105px + (120 - 105) * ((100vw - 767px) / (1600 - 767)))
+    auto;
 }
 
 .pogasit--otvet {
@@ -1620,8 +1651,6 @@ nav {
   color: rgb(40, 40, 66) !important;
   /* font-weight: bold; */
 }
-
-
 
 .other-info {
   line-height: 0.5;
@@ -1840,7 +1869,7 @@ a:hover {
 .zayavkaBlock {
   box-shadow: 0px 0px 34px rgba(0, 0, 0, 0.13915);
   border: 1px solid rgba(0, 0, 0, 0.13915);
-  padding: 50px 0
+  padding: 50px 0;
 }
 
 .button button {
@@ -2081,7 +2110,6 @@ a:hover {
 }
 
 @media only screen and (max-width: 767px) {
-
   .footerCols:after,
   .footerCols:before {
     display: flex;
@@ -2142,7 +2170,6 @@ a:hover {
   }
 
   @keyframes moving {
-
     from,
     to,
     105% {
@@ -2302,7 +2329,8 @@ a:hover {
   transform: translateX(15%);
 }
 
-.mainbanner {}
+.mainbanner {
+}
 
 .progress-done {
   background: linear-gradient(to left, #ef2221, #cc4040);
@@ -2390,7 +2418,6 @@ input:focus {
   background-color: #a7a1a18d;
 }
 
-
 /* 404 error */
 .error-contain {
   position: absolute;
@@ -2461,7 +2488,7 @@ input:focus {
 .right-bino-lense::before {
   width: 20px;
   height: 20px;
-  content: '';
+  content: "";
   display: block;
   background: black;
   position: absolute;
@@ -2503,7 +2530,7 @@ input:focus {
 
 .left-bino::after,
 .right-bino::after {
-  content: '';
+  content: "";
   padding: 21px;
   padding-top: 45px;
   position: absolute;
@@ -2523,7 +2550,7 @@ input:focus {
 
 .eye::before,
 .eye::after {
-  content: '';
+  content: "";
   display: block;
   width: 45px;
   height: 26px;
@@ -2611,7 +2638,8 @@ input:focus {
     transform: translate(-50%, -20%);
   }
 
-  50% {}
+  50% {
+  }
 }
 
 @keyframes eye-move {
@@ -2639,7 +2667,6 @@ input:focus {
     transform: translate(-70%, -55%);
   }
 }
-
 
 /* 404 error */
 
@@ -2676,7 +2703,7 @@ input:focus {
   color: #232323;
 }
 
-.notfound .notfound-404 h1>span {
+.notfound .notfound-404 h1 > span {
   display: inline-block;
   width: 120px;
   height: 120px;
@@ -2733,7 +2760,7 @@ input:focus {
     font-size: 86px;
   }
 
-  .notfound .notfound-404 h1>span {
+  .notfound .notfound-404 h1 > span {
     width: 86px;
     height: 86px;
   }
